--- a/RINL-Suggestion-Scheme-main/backend/package.json
+++ b/RINL-Suggestion-Scheme-main/backend/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "my-backend-app",
   "version": "1.0.0",
@@ -13,13 +11,15 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-  "express": "^5.1.0",
-  "mongoose": "^8.16.3",
-  "cors": "^2.8.5",
-  "dotenv": "^16.3.1",
-  "bcrypt": "^5.1.1",
-  "express-session": "^1.17.3",
-  "jsonwebtoken": "^9.0.2",
-  "nodemon": "^3.1.10"
-}
+    "express": "^5.1.0",
+    "mongoose": "^8.16.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
